<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/intro2"
    >

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="500dp"
        android:text="@string/addProduct"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textAlignment="center"
        android:background="@drawable/custom_text_view"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/slideThreeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/back"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="10dp"

            />

        <TextView
            android:id="@+id/slideThreeNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/next"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="10dp"

            />
    </LinearLayout>


</LinearLayout>