<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/intro4"
    >


    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/custom_text_view"
        android:padding="10dp"
        android:text="@string/prodDetailsOpen"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideFiveBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/back"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="10dp"

            />

        <TextView
            android:id="@+id/slideFiveDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/done"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="10dp"

            />
    </LinearLayout>


</LinearLayout>